<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/desciption"
        app:srcCompat="@drawable/zamek_krolewski" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button4"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:onClick="startgmaps"
            android:text="@string/button1"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />


        <Button
            android:id="@+id/button5"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="showmap"
            android:text="@string/o_aplikacji"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_another"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="wikifunc"
        android:text="@string/text3"
        android:textColor="@color/pink"
        android:textSize="18sp"
        android:theme="@style/MyButtonwiki" />

</LinearLayout>

